ELS Code/main/default/objects/ClientID__c/ClientID__c.object-meta.xml
<CustomObject>
    <label>ClientID</label>
    <nameField>
        <label>Client ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClientID</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>