ELS Code/main/default/objects/ClientID__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>MailingStreet__c +&quot; &quot; + MailingCity__c +&quot;, &quot;  +MailingState__c + &quot; &quot; + MailingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>