ELS Code/main/default/objects/ClientID__c/fields/CAMPUSAPROFILE__c.field-meta.xml
<CustomField>
    <fullName>CAMPUSAPROFILE__c</fullName>
    <label>CAMPUSAPROFILE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>