ELS Code/main/default/objects/ClientID__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>AOR</fullName>
            </value>
            <value>
                <fullName>Coast to Coast</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>Guest of Manager</fullName>
            </value>
            <value>
                <fullName>Guest of Members</fullName>
            </value>
            <value>
                <fullName>Guest of Sales</fullName>
            </value>
            <value>
                <fullName>Lazy Days Temp</fullName>
            </value>
            <value>
                <fullName>Marketing Guest</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>ODW-Non Member</fullName>
            </value>
            <value>
                <fullName>Park Member</fullName>
            </value>
            <value>
                <fullName>Public Program</fullName>
            </value>
            <value>
                <fullName>R.P.I</fullName>
            </value>
            <value>
                <fullName>R.P.I. - Preferred</fullName>
            </value>
            <value>
                <fullName>Reciprocal System-other</fullName>
            </value>
            <value>
                <fullName>Reserve America</fullName>
            </value>
            <value>
                <fullName>Resorts of Destinction (ROD)</fullName>
            </value>
            <value>
                <fullName>ROD - Plus</fullName>
            </value>
            <value>
                <fullName>Sales Opportunity</fullName>
            </value>
            <value>
                <fullName>Super Host Attendee, Retail</fullName>
            </value>
            <value>
                <fullName>Walden Woods Member</fullName>
            </value>
            <value>
                <fullName>Whole Saler</fullName>
            </value>
            <value>
                <fullName>WHR Member</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>