ELS Code/main/default/objects/ClientID__c/fields/ClientID_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ClientID_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>ClientID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>