ELS Code/main/default/objects/ClientID__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ClientID</relationshipLabel>
    <relationshipName>ClientID</relationshipName>
    <type>Lookup</type>
</CustomField>