ELS Code/main/default/objects/ClientID__c/fields/Deleted_by_Digi__c.field-meta.xml
<CustomField>
    <fullName>Deleted_by_Digi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted by Digi</label>
    <type>Checkbox</type>
</CustomField>