ELS Code/main/default/objects/ClientID__c/fields/Do_Not_Update_Street__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Street__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Update Street</label>
    <type>Checkbox</type>
</CustomField>