ELS Code/main/default/objects/ClientID__c/fields/Email_Holder__c.field-meta.xml
<CustomField>
    <fullName>Email_Holder__c</fullName>
    <label>Email Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>