ELS Code/main/default/objects/ClientID__c/fields/FLAS__c.field-meta.xml
<CustomField>
    <fullName>FLAS__c</fullName>
    <formula>IF( OR( ISBLANK( FirstName__c), ISBLANK( LastName__c), ISBLANK(Address_1__c+Address_2__c), ISBLANK( MailingState__c)) ,null,

IF ( AND( NOT(ISBLANK(Address_1__c)), NOT(ISBLANK(Address_2__c))), 
         MID( FirstName__c , 0, 1) &amp; LastName__c &amp; MID( Address_1__c+&apos; &apos;+Address_2__c , 0, 9) &amp; MailingState__c, 
          IF ( AND( NOT(ISBLANK(Address_1__c)), ISBLANK(Address_2__c)), 
                MID( FirstName__c , 0, 1) &amp; LastName__c &amp; MID( Address_1__c , 0, 9) &amp; MailingState__c, 
          IF ( AND( ISBLANK(Address_1__c), NOT(ISBLANK(Address_2__c))), 
               MID( FirstName__c , 0, 1) &amp; LastName__c &amp; MID( Address_2__c , 0, 9) &amp; MailingState__c, IF ( AND( ISBLANK(Address_1__c), ISBLANK(Address_2__c) ), 
               MID( FirstName__c , 0, 1) &amp; LastName__c &amp; MailingState__c, &apos;&apos;
         )
      )
   )
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLAS</label>
    <type>Text</type>
</CustomField>