ELS Code/main/default/objects/ClientID__c/fields/LAZ__c.field-meta.xml
<CustomField>
    <fullName>LAZ__c</fullName>
    <formula>IF( OR(  ISBLANK( LastName__c), ISBLANK(Address_1__c+Address_2__c), ISBLANK( MailingPostalCode__c)) ,null, 

IF ( AND( NOT(ISBLANK(Address_1__c)), NOT(ISBLANK(Address_2__c))), 
         LastName__c &amp; MID( Address_1__c+&apos; &apos;+Address_2__c , 0, 9) &amp; MID( MailingPostalCode__c , 0, 5), 
          IF ( AND( NOT(ISBLANK(Address_1__c)), ISBLANK(Address_2__c)), 
                LastName__c &amp; MID( Address_1__c, 0, 9) &amp; MID( MailingPostalCode__c , 0, 5), 

          IF ( AND( ISBLANK(Address_1__c), NOT(ISBLANK(Address_2__c))), 
              LastName__c &amp; MID(Address_2__c , 0, 9) &amp; MID( MailingPostalCode__c , 0, 5), IF ( AND( ISBLANK(Address_1__c), ISBLANK(Address_2__c) ), 
              LastName__c &amp; MID( MailingPostalCode__c , 0, 5), &apos;&apos;
         )
      )
   )
)

)</formula>
    <label>LAZ</label>
    <type>Text</type>
</CustomField>