ELS Code/main/default/objects/ClientID__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>MailingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>