ELS Code/main/default/objects/ClientID__c/fields/Misaligned_Name__c.field-meta.xml
<CustomField>
    <fullName>Misaligned_Name__c</fullName>
    <formula>ClientID_External_ID__c  &lt;&gt;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Misaligned Name</label>
    <type>Checkbox</type>
</CustomField>