ELS Code/main/default/objects/ClientID__c/fields/MODEMPLOYEEID__c.field-meta.xml
<CustomField>
    <fullName>MODEMPLOYEEID__c</fullName>
    <label>MODEMPLOYEEID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>