ELS Code/main/default/objects/ClientID__c/fields/Out_of_Sync_Primary_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Sync_Primary_Client_ID__c</fullName>
    <formula>IF(Primary_ClientID__c == TRUE,
IF( ClientID_External_ID__c != Contact__r.Primary_Client_ID__c,TRUE,FALSE),
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of Sync Primary Client ID</label>
    <type>Checkbox</type>
</CustomField>