ELS Code/main/default/objects/ClientID__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <formula>IF( OR( ISBLANK( Phone__c ), ISBLANK( FirstName__c)) ,null, Phone__c &amp; FirstName__c)</formula>
    <label>PF</label>
    <type>Text</type>
</CustomField>