ELS Code/main/default/objects/ClientID__c/fields/PL__c.field-meta.xml
<CustomField>
    <fullName>PL__c</fullName>
    <formula>IF( OR( ISBLANK( Phone__c ), ISBLANK( LastName__c )) ,null, Phone__c &amp; LastName__c)</formula>
    <label>PL</label>
    <type>Text</type>
</CustomField>