ELS Code/main/default/objects/ClientID__c/fields/Primary_ClientID__c.field-meta.xml
<CustomField>
    <fullName>Primary_ClientID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary ClientID</label>
    <type>Checkbox</type>
</CustomField>