ELS Code/main/default/objects/ClientID__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <length>225</length>
    <type>Text</type>
</CustomField>