ELS Code/main/default/objects/ClientID__c/fields/Send_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This would be checked when an Address is Abbreviated.</inlineHelpText>
    <label>Send Update Flag</label>
    <type>Checkbox</type>
</CustomField>