ELS Code/main/default/objects/ClientID__c/fields/Zip_Length__c.field-meta.xml
<CustomField>
    <fullName>Zip_Length__c</fullName>
    <formula>LEN( MailingPostalCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>