ELS Code/main/default/objects/ClientID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ClientID_External_ID__c</columns>
    <columns>NAME</columns>
    <columns>Client_Type__c</columns>
    <columns>Create_Time__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>