ELS Code/main/default/objects/ClientID__c/listViews/All_Primary_Client_IDs.listView-meta.xml
<ListView>
    <fullName>All_Primary_Client_IDs</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Address_1__c</columns>
    <columns>MailingState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_ClientID__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Primary Client IDs</label>
</ListView>