ELS Code/main/default/objects/ClientID__c/listViews/hani.listView-meta.xml
<ListView>
    <fullName>hani</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstName__c</field>
        <operation>equals</operation>
        <value>Anderson</value>
    </filters>
    <filters>
        <field>LastName__c</field>
        <operation>equals</operation>
        <value>James</value>
    </filters>
    <label>hani</label>
</ListView>